citrix-ingress-controller-operator-1.26.7/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    ingress.citrix.com/frontend-ip: "172.20.1.4"
    kubernetes.io/ingress.class: vpx
spec:
  rules:
  - host:  www.guestbook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
